src/script_parser/SolidityScriptParser.cpp

// Generated from SolidityScript.g4 by ANTLR 4.12.0


#include "SolidityScriptListener.h"
#include "SolidityScriptVisitor.h"

#include "SolidityScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SolidityScriptParserStaticData final {
  SolidityScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SolidityScriptParserStaticData(const SolidityScriptParserStaticData&) = delete;
  SolidityScriptParserStaticData(SolidityScriptParserStaticData&&) = delete;
  SolidityScriptParserStaticData& operator=(const SolidityScriptParserStaticData&) = delete;
  SolidityScriptParserStaticData& operator=(SolidityScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag solidityscriptParserOnceFlag;
SolidityScriptParserStaticData *solidityscriptParserStaticData = nullptr;

void solidityscriptParserInitialize() {
  assert(solidityscriptParserStaticData == nullptr);
  auto staticData = std::make_unique<SolidityScriptParserStaticData>(
    std::vector<std::string>{
      "source", "script", "variableDeclaration", "functionCall", "vizTrace", 
      "chainParams", "contractName", "deployAddress", "inputCSV", "count", 
      "scope", "arguments", "argument", "explicitTypeValue", "type", "identifier", 
      "expression", "randomCall", "stringArray", "structArray", "randomCallCount", 
      "randomCallArguments", "numberLiteral", "matchedParentheses", "solFile", 
      "xtlFile", "directivePath", "boolLiteral"
    },
    std::vector<std::string>{
      "", "'='", "'.'", "'('", "')'", "'<<'", "'viz'", "'trace'", "'['", 
      "']'", "'.csv'", "'*'", "'@'", "','", "'::'", "'{'", "'}'", "'.sol'", 
      "'.xtl'", "", "", "", "", "", "", "'chain'", "'stopwatch'", "'random'", 
      "'all'", "'intra'", "'cross'", "'uint16'", "'uint32'", "'uint256'", 
      "'address'", "'bool'", "'evmc::address'", "'bytes32'", "", "'true'", 
      "'false'", "'deploy'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "WINPATH", "WIN_ABSOLUTE_PATH", "WIN_REALATIVE_PATH", "UNIXPATH", 
      "UNIX_ABSOLUTE_PATH", "UNIX_REALATIVE_PATH", "CHAIN", "STOPWATCH", 
      "RANDOM", "ALL", "INTRA", "CROSS", "UINT16", "UINT32", "UINT256", 
      "ADDRESS", "BOOL", "EVMC_ADDRESS", "BYTES", "StringLiteral", "TRUE", 
      "FALSE", "DEPLOY", "Identifier", "DecimalNumber", "HexNumber", "WS", 
      "CommentSingleLine", "CommentMultiLine"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  solidityscriptParserStaticData = staticData.release();
}

}

SolidityScriptParser::SolidityScriptParser(TokenStream *input) : SolidityScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SolidityScriptParser::SolidityScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SolidityScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *solidityscriptParserStaticData->atn, solidityscriptParserStaticData->decisionToDFA, solidityscriptParserStaticData->sharedContextCache, options);
}

SolidityScriptParser::~SolidityScriptParser() {
  delete _interpreter;
}

const atn::ATN& SolidityScriptParser::getATN() const {
  return *solidityscriptParserStaticData->atn;
}

std::string SolidityScriptParser::getGrammarFileName() const {
  return "SolidityScript.g4";
}

const std::vector<std::string>& SolidityScriptParser::getRuleNames() const {
  return solidityscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& SolidityScriptParser::getVocabulary() const {
  return solidityscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SolidityScriptParser::getSerializedATN() const {
  return solidityscriptParserStaticData->serializedATN;
}


//----------------- SourceContext ------------------------------------------------------------------

SolidityScriptParser::SourceContext::SourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SolidityScriptParser::SourceContext::EOF() {
  return getToken(SolidityScriptParser::EOF, 0);
}

std::vector<SolidityScriptParser::ScriptContext *> SolidityScriptParser::SourceContext::script() {
  return getRuleContexts<SolidityScriptParser::ScriptContext>();
}

SolidityScriptParser::ScriptContext* SolidityScriptParser::SourceContext::script(size_t i) {
  return getRuleContext<SolidityScriptParser::ScriptContext>(i);
}


size_t SolidityScriptParser::SourceContext::getRuleIndex() const {
  return SolidityScriptParser::RuleSource;
}

void SolidityScriptParser::SourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSource(this);
}

void SolidityScriptParser::SourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSource(this);
}


std::any SolidityScriptParser::SourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitSource(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::SourceContext* SolidityScriptParser::source() {
  SourceContext *_localctx = _tracker.createInstance<SourceContext>(_ctx, getState());
  enterRule(_localctx, 0, SolidityScriptParser::RuleSource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 32845863092288) != 0)) {
      setState(56);
      script();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(62);
    match(SolidityScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScriptContext ------------------------------------------------------------------

SolidityScriptParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::VariableDeclarationContext* SolidityScriptParser::ScriptContext::variableDeclaration() {
  return getRuleContext<SolidityScriptParser::VariableDeclarationContext>(0);
}

SolidityScriptParser::FunctionCallContext* SolidityScriptParser::ScriptContext::functionCall() {
  return getRuleContext<SolidityScriptParser::FunctionCallContext>(0);
}


size_t SolidityScriptParser::ScriptContext::getRuleIndex() const {
  return SolidityScriptParser::RuleScript;
}

void SolidityScriptParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void SolidityScriptParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}


std::any SolidityScriptParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::ScriptContext* SolidityScriptParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 2, SolidityScriptParser::RuleScript);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(65);
      functionCall();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

SolidityScriptParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::ExpressionContext* SolidityScriptParser::VariableDeclarationContext::expression() {
  return getRuleContext<SolidityScriptParser::ExpressionContext>(0);
}

SolidityScriptParser::IdentifierContext* SolidityScriptParser::VariableDeclarationContext::identifier() {
  return getRuleContext<SolidityScriptParser::IdentifierContext>(0);
}

SolidityScriptParser::MatchedParenthesesContext* SolidityScriptParser::VariableDeclarationContext::matchedParentheses() {
  return getRuleContext<SolidityScriptParser::MatchedParenthesesContext>(0);
}


size_t SolidityScriptParser::VariableDeclarationContext::getRuleIndex() const {
  return SolidityScriptParser::RuleVariableDeclaration;
}

void SolidityScriptParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void SolidityScriptParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}


std::any SolidityScriptParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::VariableDeclarationContext* SolidityScriptParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, SolidityScriptParser::RuleVariableDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    identifier();
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SolidityScriptParser::T__7) {
      setState(69);
      matchedParentheses();
    }
    setState(72);
    match(SolidityScriptParser::T__0);
    setState(73);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

SolidityScriptParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SolidityScriptParser::FunctionCallContext::CHAIN() {
  return getToken(SolidityScriptParser::CHAIN, 0);
}

tree::TerminalNode* SolidityScriptParser::FunctionCallContext::DEPLOY() {
  return getToken(SolidityScriptParser::DEPLOY, 0);
}

SolidityScriptParser::SolFileContext* SolidityScriptParser::FunctionCallContext::solFile() {
  return getRuleContext<SolidityScriptParser::SolFileContext>(0);
}

SolidityScriptParser::XtlFileContext* SolidityScriptParser::FunctionCallContext::xtlFile() {
  return getRuleContext<SolidityScriptParser::XtlFileContext>(0);
}

SolidityScriptParser::ScopeContext* SolidityScriptParser::FunctionCallContext::scope() {
  return getRuleContext<SolidityScriptParser::ScopeContext>(0);
}

SolidityScriptParser::ArgumentsContext* SolidityScriptParser::FunctionCallContext::arguments() {
  return getRuleContext<SolidityScriptParser::ArgumentsContext>(0);
}

SolidityScriptParser::IdentifierContext* SolidityScriptParser::FunctionCallContext::identifier() {
  return getRuleContext<SolidityScriptParser::IdentifierContext>(0);
}

SolidityScriptParser::ChainParamsContext* SolidityScriptParser::FunctionCallContext::chainParams() {
  return getRuleContext<SolidityScriptParser::ChainParamsContext>(0);
}

tree::TerminalNode* SolidityScriptParser::FunctionCallContext::STOPWATCH() {
  return getToken(SolidityScriptParser::STOPWATCH, 0);
}

SolidityScriptParser::VizTraceContext* SolidityScriptParser::FunctionCallContext::vizTrace() {
  return getRuleContext<SolidityScriptParser::VizTraceContext>(0);
}

SolidityScriptParser::ExpressionContext* SolidityScriptParser::FunctionCallContext::expression() {
  return getRuleContext<SolidityScriptParser::ExpressionContext>(0);
}

SolidityScriptParser::CountContext* SolidityScriptParser::FunctionCallContext::count() {
  return getRuleContext<SolidityScriptParser::CountContext>(0);
}

SolidityScriptParser::InputCSVContext* SolidityScriptParser::FunctionCallContext::inputCSV() {
  return getRuleContext<SolidityScriptParser::InputCSVContext>(0);
}


size_t SolidityScriptParser::FunctionCallContext::getRuleIndex() const {
  return SolidityScriptParser::RuleFunctionCall;
}

void SolidityScriptParser::FunctionCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionCall(this);
}

void SolidityScriptParser::FunctionCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionCall(this);
}


std::any SolidityScriptParser::FunctionCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitFunctionCall(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::FunctionCallContext* SolidityScriptParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 6, SolidityScriptParser::RuleFunctionCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(75);
      match(SolidityScriptParser::CHAIN);
      setState(76);
      match(SolidityScriptParser::T__1);
      setState(77);
      match(SolidityScriptParser::DEPLOY);
      setState(79);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SolidityScriptParser::T__11) {
        setState(78);
        scope();
      }
      setState(83);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(81);
        solFile();
        break;
      }

      case 2: {
        setState(82);
        xtlFile();
        break;
      }

      default:
        break;
      }
      setState(90);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SolidityScriptParser::T__2) {
        setState(85);
        match(SolidityScriptParser::T__2);
        setState(87);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 32845762428928) != 0)) {
          setState(86);
          arguments();
        }
        setState(89);
        match(SolidityScriptParser::T__3);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(92);
      match(SolidityScriptParser::CHAIN);
      setState(93);
      match(SolidityScriptParser::T__1);
      setState(94);
      identifier();
      setState(96);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        setState(95);
        chainParams();
        break;
      }

      default:
        break;
      }
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(98);
      match(SolidityScriptParser::STOPWATCH);
      setState(99);
      match(SolidityScriptParser::T__1);
      setState(100);
      identifier();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(101);
      vizTrace();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(105);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
      case 1: {
        setState(102);
        identifier();
        setState(103);
        match(SolidityScriptParser::T__0);
        break;
      }

      default:
        break;
      }
      setState(107);
      expression(0);
      setState(109);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SolidityScriptParser::T__10) {
        setState(108);
        count();
      }
      setState(112);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SolidityScriptParser::T__11) {
        setState(111);
        scope();
      }
      setState(114);
      match(SolidityScriptParser::T__2);
      setState(116);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 32845762428928) != 0)) {
        setState(115);
        arguments();
      }
      setState(118);
      match(SolidityScriptParser::T__3);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(120);
      identifier();
      setState(121);
      match(SolidityScriptParser::T__4);
      setState(122);
      inputCSV();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VizTraceContext ------------------------------------------------------------------

SolidityScriptParser::VizTraceContext::VizTraceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::IdentifierContext* SolidityScriptParser::VizTraceContext::identifier() {
  return getRuleContext<SolidityScriptParser::IdentifierContext>(0);
}

SolidityScriptParser::NumberLiteralContext* SolidityScriptParser::VizTraceContext::numberLiteral() {
  return getRuleContext<SolidityScriptParser::NumberLiteralContext>(0);
}


size_t SolidityScriptParser::VizTraceContext::getRuleIndex() const {
  return SolidityScriptParser::RuleVizTrace;
}

void SolidityScriptParser::VizTraceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVizTrace(this);
}

void SolidityScriptParser::VizTraceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVizTrace(this);
}


std::any SolidityScriptParser::VizTraceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitVizTrace(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::VizTraceContext* SolidityScriptParser::vizTrace() {
  VizTraceContext *_localctx = _tracker.createInstance<VizTraceContext>(_ctx, getState());
  enterRule(_localctx, 8, SolidityScriptParser::RuleVizTrace);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(SolidityScriptParser::T__5);
    setState(127);
    match(SolidityScriptParser::T__1);
    setState(128);
    match(SolidityScriptParser::T__6);
    setState(129);
    identifier();
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SolidityScriptParser::T__7) {
      setState(130);
      match(SolidityScriptParser::T__7);
      setState(131);
      numberLiteral();
      setState(132);
      match(SolidityScriptParser::T__8);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChainParamsContext ------------------------------------------------------------------

SolidityScriptParser::ChainParamsContext::ChainParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::ContractNameContext* SolidityScriptParser::ChainParamsContext::contractName() {
  return getRuleContext<SolidityScriptParser::ContractNameContext>(0);
}

SolidityScriptParser::NumberLiteralContext* SolidityScriptParser::ChainParamsContext::numberLiteral() {
  return getRuleContext<SolidityScriptParser::NumberLiteralContext>(0);
}


size_t SolidityScriptParser::ChainParamsContext::getRuleIndex() const {
  return SolidityScriptParser::RuleChainParams;
}

void SolidityScriptParser::ChainParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChainParams(this);
}

void SolidityScriptParser::ChainParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChainParams(this);
}


std::any SolidityScriptParser::ChainParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitChainParams(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::ChainParamsContext* SolidityScriptParser::chainParams() {
  ChainParamsContext *_localctx = _tracker.createInstance<ChainParamsContext>(_ctx, getState());
  enterRule(_localctx, 10, SolidityScriptParser::RuleChainParams);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(138);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SolidityScriptParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(136);
        contractName();
        break;
      }

      case SolidityScriptParser::DecimalNumber:
      case SolidityScriptParser::HexNumber: {
        enterOuterAlt(_localctx, 2);
        setState(137);
        numberLiteral();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContractNameContext ------------------------------------------------------------------

SolidityScriptParser::ContractNameContext::ContractNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::IdentifierContext* SolidityScriptParser::ContractNameContext::identifier() {
  return getRuleContext<SolidityScriptParser::IdentifierContext>(0);
}


size_t SolidityScriptParser::ContractNameContext::getRuleIndex() const {
  return SolidityScriptParser::RuleContractName;
}

void SolidityScriptParser::ContractNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContractName(this);
}

void SolidityScriptParser::ContractNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContractName(this);
}


std::any SolidityScriptParser::ContractNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SolidityScriptVisitor*>(visitor))
    return parserVisitor->visitContractName(this);
  else
    return visitor->visitChildren(this);
}

SolidityScriptParser::ContractNameContext* SolidityScriptParser::contractName() {
  ContractNameContext *_localctx = _tracker.createInstance<ContractNameContext>(_ctx, getState());
  enterRule(_localctx, 12, SolidityScriptParser::RuleContractName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeployAddressContext ------------------------------------------------------------------

SolidityScriptParser::DeployAddressContext::DeployAddressContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SolidityScriptParser::IdentifierContext* SolidityScriptParser::DeployAddressContext::identifier() {
  return getRuleContext<SolidityScriptParser::IdentifierContext>(0);
}


size_t SolidityScriptParser::DeployAddressContext::getRuleIndex() const {
  return SolidityScriptParser::RuleDeployAddress;
}

void SolidityScriptParser::DeployAddressContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeployAddress(this);
}

void SolidityScriptParser::DeployAddressContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SolidityScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeployAddress(this);
}

